...
                            <constraint firstItem="HE5-Hy-knf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="IQV-ZX-Exa"/>
                            <constraint firstItem="HE5-Hy-knf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kMs-zg-26r"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Your Cats" id="Dto-ih-Dfh"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="tableView" destination="HE5-Hy-knf" id="Lbs-By-PNh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.92949247359999998" green="0.43399173019999998" blue="0.53211945299999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTB-Uy-Sh3">
                                                <rect key="frame" x="32" y="650" width="256" height="30"/>
                                                <state key="normal" title="Done">
                                                    <color key="titleColor" red="0.2271662354" green="0.59001177549999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="doneButton:" destination="YET-8B-1dd" eventType="touchUpInside" id="9yQ-nw-Jf5"/>
                                                </connections>
...
                                                        <variation key="heightClass=regular-widthClass=compact">
                                                            <mask key="constraints">
                                                                <exclude reference="AdD-Nl-4qd"/>
                                                            </mask>
                                                        </variation>
                                                    </view>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't forget..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jJR-lg-emw">
                                                        <rect key="frame" x="0.0" y="112" width="288" height="20.5"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="20.5" id="5F4-SE-Gbb"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="288" id="nuz-FX-MBr"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
            <objects>
                <viewController storyboardIdentifier="BreedViewController" id="PtG-Ww-Dbw" customClass="BreedViewController" customModule="Purrfect" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="lBQ-co-UDS">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tap to select a breed" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mLE-Ph-QEn">
                                <rect key="frame" x="16" y="45.5" width="288" height="75.5"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30.5" id="NCF-oj-JLN"/>
                                </constraints>
                                <color key="textColor" red="0.97854572529999995" green="0.41846722359999999" blue="0.56957679989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <include reference="VpL-bP-pyK"/>
                                <include reference="Xvg-ca-Gk1"/>
                                <include reference="rPq-sh-bbU"/>
                            </mask>
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Breeds" image="icons8-cat-footprint-30" id="8sf-00-Q2O">
                        <color key="badgeColor" red="0.97854572529999995" green="0.41846722359999999" blue="0.56957679989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="descriptionTextView" destination="f4q-EZ-lqc" id="mqT-S9-6vx"/>
                        <outlet property="imageView" destination="AyJ-n0-ls8" id="x7B-vy-QU3"/>
                        <outlet property="lifeSpanLabel" destination="0W2-Fc-KTV" id="RL9-Jv-apy"/>
...
