...
    private let notificationPublisher = NotificationPublisher()
    var currentCatIndex : Int = 0
    
    @IBAction func doneButton(_ sender: Any) {
        
        if nameTextField.text == "" || genderTextField.text == "" || breedTextField.text == "" || birthdayTextField.text == "" || descTextView.text == "" {
            let alert = UIAlertController(title: "Oops, you forgot something...", message: "It's recommended you fill in all the blanks before continuing.", preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "Okay", style: .cancel, handler: nil))
            
            self.present(alert, animated: true)
        } else {
            if seagueIdentifier == "goToAddCats"{
                myViewModel!.addData(ownerName: "abc", nameParam: nameTextField.text!, genderParam: genderTextField.text! , birthdayParam: birthdayTextField.text!, breedParam : breedTextField.text!, descParam : descTextView.text!)
                self.navigationController!.popViewController(animated: false)
...
